--- a/Virtion.Depends/Virtion.Depends/MainWindow.xaml
+++ b/Virtion.Depends/Virtion.Depends/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
         WindowStartupLocation="CenterScreen"
         Title="Virtion.Depends - " 
-        Height="400" Width="600"
+        Height="600" Width="800"
         Background="#eeeef2"
         GlowBrush="Black"    
         WindowTitleBrush="#eeeef2"
@@ -17,44 +17,8 @@
         PreviewDragEnter="Window_PreviewDragEnter"
         PreviewDragOver="Window_PreviewDragEnter"
         PreviewDrop="Window_PreviewDrop"
+        Icon="icon.ico"
     >
-    <controls:MetroWindow.Resources>
-        <Style x:Key="CommondButtonStyle" TargetType="Button">
-            <Setter Property="Foreground" Value="Black"/>
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="Width" Value="46"  />
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="BorderBrush" Value="Transparent"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type Button}">
-                        <Grid>
-                            <Border x:Name="Background" Background="{TemplateBinding Background}" CornerRadius="{Binding (controls:ControlsHelper.CornerRadius), Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}"/>
-                            <Border x:Name="Border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{x:Null}" CornerRadius="{Binding (controls:ControlsHelper.CornerRadius), Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-                            <Border x:Name="DisabledVisualElement" Background="{DynamicResource ControlsDisabledBrush}" CornerRadius="{Binding (controls:ControlsHelper.CornerRadius), Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}" IsHitTestVisible="False" Opacity="0" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-                            <controls:ContentControlEx x:Name="PART_ContentPresenter" ContentCharacterCasing="{Binding (controls:ControlsHelper.ContentCharacterCasing), RelativeSource={RelativeSource TemplatedParent}}" ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" ContentStringFormat="{TemplateBinding ContentStringFormat}" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" Padding="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>
-                        </Grid>
-                        <ControlTemplate.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" TargetName="Background" Value="{DynamicResource GrayBrush8}"/>
-                            </Trigger>
-                            <Trigger Property="IsPressed" Value="True">
-                                <Setter Property="Background" TargetName="Background" Value="{DynamicResource GrayBrush7}"/>
-                            </Trigger>
-                            <Trigger Property="IsKeyboardFocusWithin" Value="True">
-                                <Setter Property="BorderThickness" TargetName="Border" Value="2"/>
-                                <Setter Property="BorderBrush" TargetName="Border" Value="{DynamicResource ButtonMouseOverBorderBrush}"/>
-                            </Trigger>
-                            <Trigger Property="IsEnabled" Value="False">
-                                <Setter Property="Opacity" TargetName="DisabledVisualElement" Value="0.7"/>
-                                <Setter Property="Opacity" TargetName="PART_ContentPresenter" Value="0.3"/>
-                            </Trigger>
-                        </ControlTemplate.Triggers>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-    </controls:MetroWindow.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
@@ -69,6 +33,10 @@
                     <Button x:Name="B_Open"
                         Click="B_Open_OnClick"
                         Content="Open"
+                       />
+                    <Button x:Name="B_Other"
+                        Click="B_Other_OnClick"
+                        Content=""
                        />
                 </ToolBar>
             </Grid>
@@ -108,12 +76,22 @@
             <GridSplitter Width="2"
                   Background="#CCCCCC"        
                   />
-
-            <ListBox x:Name="LB_List"
-                Grid.Column="1"
-                Background="White" 
-                Margin="10"     
+            <Grid  Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>    
+                <TextBox x:Name="TB_Search" 
+                    VerticalAlignment="Top" 
+                    Margin="5,5"     
+                    TextChanged="TB_Search_OnTextChanged"     
+                   />
+                <ListBox x:Name="LB_List"
+                    Grid.Row="1"
+                    Background="White" 
+                    Margin="5,5,5,5"     
                 />
+            </Grid>
         </Grid>
 
         <Border x:Name="B_InfoPlane"
